--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./images/logo.jpg" />
-    <title>Ice Cream</title>
+
+    <title>Portfolio</title>
+
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
     <link
@@ -17,11 +18,6 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
-    />
   </head>
   <body class="scroll">
     <!-- ❗️❗️❗️ Add partials like so for every page -->
